<resources>
    <string name="app_name">MineWatcher</string>
    <string name="left_cutter_motor">МР левый</string>
    <string name="right_cutter_motor">МР правый</string>
    <string name="left_driving_motor">МП левый</string>
    <string name="right_driving_motor">МП правый</string>
    <string name="oil_pump_motor">МС</string>
    <string name="motor_current_min">0%</string>
    <string name="motor_current_max">255%</string>
    <string name="motor_temperature_min">0°C</string>
    <string name="motor_temperature_max">255°C</string>
    <string name="inverter_name">ПЧ</string>
    <string name="inverter_frequency_name">частота, Гц</string>
    <string name="inverter_frequency_value_min">0.0</string>
    <string name="set_frequency_name">задан.</string>
    <string name="current_frequency_name">текущ.</string>
    <string name="code_number_example">000</string>
    <string name="codes_display_name">Блок индикации</string>
    <string name="velocity_and_direction_name">СКОРОСТЬ</string>
    <string name="velocity_measure">м/мин</string>
    <string name="velocity_value_example">0.00</string>
    <string name="shearer_position_name">Положение комбайна:</string>
    <string name="position_distance_example">150</string>
    <string name="position_distance_measure">\u0020м</string>
    <string name="position_roof_support">секция\u0020</string>
    <string name="position_roof_support_number_example">100</string>
    <string name="breakdown_pump_motor_temperature">Авар.</string>
    <string name="normal_pump_motor_temperature">Норм.</string>
    <string name="server_not_available">Нет связи с сервером</string>
    <string name="network_not_available">Сеть не доступна</string>
    <string name="underground_modem_not_available">Нет связи с подземным модемом</string>
    <string name="shearer_not_available">Нет связи с комбайном</string>
    <string name="server_disconnected">Соединение разорвано</string>
    <string name="connecting">Подключение…</string>
    <string name="left_cutter_motor_full_name">Левый двигатель резания</string>
    <string name="right_cutter_motor_full_name">Правый двигатель резания</string>
    <string name="left_haulage_motor_full_name">Левый двигатель подачи</string>
    <string name="right_haulage_motor_full_name">Правый двигатель подачи</string>
    <string name="stator">Статор</string>
    <string name="bearing_n">Щит N</string>
    <string name="bearing_p">Щит P</string>
    <string name="gearcase">Редуктор</string>
    <string name="liter">\u0020л</string>
    <string name="atmosphere">\u0020атм</string>
    <string name="lpm">\u0020л/мин</string>
    <string name="volts">\u0020В</string>
    <string name="hydraulic_fluid_temperature_name">Температура масла в баке</string>
    <string name="hydraulic_fluid_level_name">Уровень масла в баке</string>
    <string name="hydraulic_fluid_level_min_value">0 л</string>
    <string name="dust_reducer_water_pressure_name">Давление воды в системе орошения</string>
    <string name="pressure_min_value">0 атм</string>
    <string name="brakes_hydraulic_fluid_pressure_name">Давление масла в тормозной системе</string>
    <string name="pump_hydraulic_fluid_pressure_name">Давление масла в системе маслонасоса</string>
    <string name="haulage_system_water_consumption_name">Расход воды системы охлаждения МП</string>
    <string name="water_consumption_min_value">0 л/мин</string>
    <string name="cutting_system_water_consumption_name">Расход воды системы охлаждения МР</string>
    <string name="shearer_water_consumption_name">Общий расход воды комбайна</string>
    <string name="high_voltage_name">Силовое напряжение</string>
    <string name="voltage_min_value">0 В</string>
    <string name="connection_available">Связь есть</string>
    <string name="connection_not_available">Связи нет</string>
    <string name="current_malfunctions">Текущие неисправности</string>
    <string name="last_stop_cause">Причины выключения комбайна</string>
    <string name="no_data">Нет данных</string>
    <string name="connection_with_blocks">Связь с блоками</string>
    <string name="connection_dialog_title">Новое подключение</string>
    <string name="connection_dialog_incompatible_format">Неверный IP адрес, номер порта или не выбрана модель комбайна</string>
    <string name="location_diagram">Циклограмма</string>
    <string name="dialog_enter_ip_address">Введите IP адрес сервера</string>
    <string name="dialog_enter_port_number">Введите номер порта</string>
    <string name="dialog_enter_name">Введите имя</string>
    <string name="bottom_navigation_technical_window">Тех. окно</string>
    <string name="bottom_navigation_temperature_and_pressure">Датчики</string>
    <string name="bottom_navigation_malfunctions_and_connection">Связь и аварии</string>
    <string name="bottom_navigation_location">Циклограмма</string>
    <string name="delete">Удалить</string>
    <string name="connect">Подключить</string>
    <string name="one_item_deleted">1 адрес удален</string>
    <string name="cancel">Отмена</string>
    <string name="refresh">Обновить</string>
    <string name="connection_restored">Подключено</string>
    <string name="no_connections_available">Нет доступных подключений</string>

</resources>
