<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <include
        android:id="@+id/codes_display"
        layout="@layout/view_codes_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <include
        android:id="@+id/velocity_and_direction"
        layout="@layout/view_velocity_and_direction"
        android:layout_width="@dimen/view_velocity_and_direction_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/codes_display"/>

    <include
        layout="@layout/view_shearer_animation"
        android:id="@+id/shearer_animation"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="@dimen/view_shearer_animation_margin"
        android:layout_below="@+id/velocity_and_direction"
        android:layout_centerHorizontal="true"/>

    <include
        layout="@layout/view_shearer_position"
        android:id="@+id/shearer_position"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="@dimen/view_shearer_position_margin"
        android:layout_marginEnd="@dimen/view_shearer_position_margin"
        android:layout_marginBottom="@dimen/default_padding"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/bars_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/view_shearer_position_margin"
        android:layout_marginEnd="@dimen/view_shearer_position_margin"
        android:layout_marginTop="@dimen/default_padding"
        android:layout_marginBottom="@dimen/view_shearer_position_margin"
        android:orientation="horizontal"
        android:layout_below="@+id/shearer_animation">

        <com.artemlikhomanov.minewatcher.views.MotorCurrentAndTemperatureView
            android:id="@+id/left_cutter_motor_current_and_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:mctv_headerText="@string/left_cutter_motor"
            app:mctv_currentText="@string/motor_current_min"
            app:mctv_temperatureText="@string/motor_temperature_min"
            app:mctv_headerTextColor="?attr/colorPrimary"
            app:mctv_textColor="?attr/colorPrimary"
            app:mctv_headerTextSize="@dimen/view_motor_current_and_temperature_bar_value_font_size"
            app:mctv_currentTextSize="@dimen/view_motor_current_and_temperature_bar_value_font_size"
            app:mctv_temperatureTextSize="@dimen/view_motor_current_and_temperature_bar_value_font_size"
            app:mctv_currentBarColor="@drawable/motor_current_gradient"
            app:mctv_temperatureBarColor="@drawable/motor_temperature_gradient"
            app:mctv_boundaryColor="?attr/colorPrimary"
            app:mctv_maxCurrent="@dimen/max_motor_current"
            app:mctv_maxTemperature="@dimen/max_motor_temperature"/>

        <com.artemlikhomanov.minewatcher.views.MotorCurrentAndTemperatureView
            android:id="@+id/left_driving_motor_current_and_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:mctv_headerText="@string/left_driving_motor"
            app:mctv_currentText="@string/motor_current_min"
            app:mctv_temperatureText="@string/motor_temperature_min"
            app:mctv_headerTextColor="?attr/colorPrimary"
            app:mctv_textColor="?attr/colorPrimary"
            app:mctv_headerTextSize="@dimen/view_motor_current_and_temperature_bar_value_font_size"
            app:mctv_currentTextSize="@dimen/view_motor_current_and_temperature_bar_value_font_size"
            app:mctv_temperatureTextSize="@dimen/view_motor_current_and_temperature_bar_value_font_size"
            app:mctv_currentBarColor="@drawable/motor_current_gradient"
            app:mctv_temperatureBarColor="@drawable/motor_temperature_gradient"
            app:mctv_boundaryColor="?attr/colorPrimary"
            app:mctv_maxCurrent="@dimen/max_motor_current"
            app:mctv_maxTemperature="@dimen/max_motor_temperature"/>

        <com.artemlikhomanov.minewatcher.views.MotorCurrentAndTemperatureView
            android:id="@+id/oil_pump_motor_current_and_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:mctv_headerText="@string/oil_pump_motor"
            app:mctv_currentText="@string/motor_current_min"
            app:mctv_temperatureText="@string/motor_temperature_min"
            app:mctv_headerTextColor="?attr/colorPrimary"
            app:mctv_textColor="?attr/colorPrimary"
            app:mctv_headerTextSize="@dimen/view_motor_current_and_temperature_bar_value_font_size"
            app:mctv_currentTextSize="@dimen/view_motor_current_and_temperature_bar_value_font_size"
            app:mctv_temperatureTextSize="@dimen/view_motor_current_and_temperature_bar_value_font_size"
            app:mctv_currentBarColor="@drawable/motor_current_gradient"
            app:mctv_temperatureBarColor="@drawable/motor_temperature_gradient"
            app:mctv_boundaryColor="?attr/colorPrimary"
            app:mctv_maxCurrent="@dimen/max_motor_current"
            app:mctv_maxTemperature="@dimen/max_motor_temperature"/>

        <com.artemlikhomanov.minewatcher.views.InverterFrequencyView
            android:id="@+id/inverter_frequency_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:ifv_headerText="@string/inverter_name"
            app:ifv_subHeaderText="@string/inverter_frequency_name"
            app:ifv_givenFrequencyText="@string/inverter_frequency_value_min"
            app:ifv_actualFrequencyText="@string/inverter_frequency_value_min"
            app:ifv_givenFrequencyBottomText="@string/set_frequency_name"
            app:ifv_actualFrequencyBottomText="@string/current_frequency_name"
            app:ifv_headerTextColor="?attr/colorPrimary"
            app:ifv_textColor="?attr/colorPrimary"
            app:ifv_headerTextSize="@dimen/view_inverter_name_font_size"
            app:ifv_subHeaderTextSize="@dimen/view_inverter_name_font_size"
            app:ifv_frequencyTextSize="@dimen/view_inverter_frequency_bar_value_font_size"
            app:ifv_bottomLineTextSize="@dimen/view_inverter_frequency_bar_name_font_size"
            app:ifv_givenFrequencyBarColor="@drawable/inverter_frequency_gradient"
            app:ifv_actualFrequencyBarColor="@drawable/inverter_frequency_gradient"
            app:ifv_boundaryColor="?attr/colorPrimary"/>

        <com.artemlikhomanov.minewatcher.views.MotorCurrentAndTemperatureView
            android:id="@+id/right_driving_motor_current_and_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:mctv_headerText="@string/right_driving_motor"
            app:mctv_currentText="@string/motor_current_min"
            app:mctv_temperatureText="@string/motor_temperature_min"
            app:mctv_headerTextColor="?attr/colorPrimary"
            app:mctv_textColor="?attr/colorPrimary"
            app:mctv_headerTextSize="@dimen/view_motor_current_and_temperature_bar_value_font_size"
            app:mctv_currentTextSize="@dimen/view_motor_current_and_temperature_bar_value_font_size"
            app:mctv_temperatureTextSize="@dimen/view_motor_current_and_temperature_bar_value_font_size"
            app:mctv_currentBarColor="@drawable/motor_current_gradient"
            app:mctv_temperatureBarColor="@drawable/motor_temperature_gradient"
            app:mctv_boundaryColor="?attr/colorPrimary"
            app:mctv_maxCurrent="@dimen/max_motor_current"
            app:mctv_maxTemperature="@dimen/max_motor_temperature"/>

        <com.artemlikhomanov.minewatcher.views.MotorCurrentAndTemperatureView
            android:id="@+id/right_cutter_motor_current_and_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:mctv_headerText="@string/right_cutter_motor"
            app:mctv_currentText="@string/motor_current_min"
            app:mctv_temperatureText="@string/motor_temperature_min"
            app:mctv_headerTextColor="?attr/colorPrimary"
            app:mctv_textColor="?attr/colorPrimary"
            app:mctv_headerTextSize="@dimen/view_motor_current_and_temperature_bar_value_font_size"
            app:mctv_currentTextSize="@dimen/view_motor_current_and_temperature_bar_value_font_size"
            app:mctv_temperatureTextSize="@dimen/view_motor_current_and_temperature_bar_value_font_size"
            app:mctv_currentBarColor="@drawable/motor_current_gradient"
            app:mctv_temperatureBarColor="@drawable/motor_temperature_gradient"
            app:mctv_boundaryColor="?attr/colorPrimary"
            app:mctv_maxCurrent="@dimen/max_motor_current"
            app:mctv_maxTemperature="@dimen/max_motor_temperature"/>

    </LinearLayout>

</RelativeLayout>