<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/view_shearer_position_margin"
                android:background="@drawable/background_with_thin_borders"
                xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/position_text_view_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/position_text_view_linear_layout_padding"
        android:layout_alignEnd="@+id/position_longwall_image_view">

        <TextView
            android:id="@+id/position_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textSize="@dimen/position_name_text_size"
            android:textStyle="bold"
            android:text="@string/shearer_position_name"/>

        <TextView
            android:id="@+id/position_distance_value_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="end"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textSize="@dimen/position_name_text_size"
            tools:text="@string/position_distance_example"/>

        <TextView
            android:id="@+id/position_distance_measure_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textSize="@dimen/position_name_text_size"
            android:text="@string/position_distance_measure"/>

        <TextView
            android:id="@+id/position_roof_support_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textSize="@dimen/position_name_text_size"
            android:text="@string/position_roof_support"/>

        <TextView
            android:id="@+id/position_roof_support_number_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="start"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textSize="@dimen/position_name_text_size"
            tools:text="@string/position_roof_support_number_example"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/position_shearer_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/position_shearer_image_view_margin"
        android:layout_marginEnd="@dimen/position_shearer_image_view_margin"
        android:layout_marginTop="@dimen/position_shearer_image_view_margin"
        android:layout_below="@+id/position_text_view_linear_layout"
        android:src="@drawable/cls450_position_shearer"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/position_longwall_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/position_longwall_image_view_padding"
        android:paddingEnd="@dimen/position_longwall_image_view_padding"
        android:paddingBottom="@dimen/position_longwall_image_view_bottom_padding"
        android:src="@drawable/position_longwall"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/position_shearer_image_view"
        tools:ignore="ContentDescription"/>

</RelativeLayout>