<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="@dimen/view_velocity_and_direction_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/view_velocity_and_direction_margin"
                xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/velocity_and_direction_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/view_velocity_and_direction_padding"
        android:textSize="@dimen/velocity_and_direction_name_font_size"
        android:textStyle="bold"
        android:text="@string/velocity_and_direction_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/arrow_leftward_motion_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/arrow_leftward_motion_24dp"
        android:layout_below="@+id/velocity_and_direction_name_text_view"
        android:layout_alignParentStart="true"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/arrow_rightward_motion_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/arrow_rightward_motion_24dp"
        android:layout_below="@+id/velocity_and_direction_name_text_view"
        android:layout_alignParentEnd="true"
        tools:ignore="ContentDescription"/>

    <LinearLayout
        android:layout_width="@dimen/velocity_measurement_width"
        android:layout_height="@dimen/velocity_measurement_height"
        android:orientation="horizontal"
        android:padding="@dimen/view_velocity_and_direction_padding"
        android:background="@drawable/background_with_thin_borders"
        android:layout_below="@+id/velocity_and_direction_name_text_view"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/velocity_value_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/velocity_font_size"
            tools:text="@string/velocity_value_example"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/velocity_font_size"
            android:text="@string/velocity_measure"/>

    </LinearLayout>

</RelativeLayout>